[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game_BlockCrasher/Scripts/LevelIcon.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/locked_background.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/unlocked_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/i_fink_u_freeky.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[node name="LevelIcon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
locked = true
locked_texture = ExtResource( 2 )
unlocked_texture = ExtResource( 3 )

[node name="LockButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )

[node name="LevelLabel" type="Label" parent="."]
visible = false
margin_left = 4.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
[connection signal="pressed" from="LockButton" to="." method="_on_LockButton_pressed"]
